--- a/Newsletter_Sign_Up.html
+++ b/Newsletter_Sign_Up.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="js/passwordCheck.js"></script>
+  <script src="javascript.js"></script>
 </head>
 
 
-<form id="newsletter_sign_up">
-  <input type="email" name="email" placeholder="Enter Email" pattern=".+(\.co\.uk|\.com)" title="Please enter a valid UK email." required>
-  <input type="password" name="password" placeholder="Enter Password" required>
+<form id="info" onsubmit="return validateForm()" method="post">
+  <input type="text" name="name" placeholder="Enter Name" required>
+  <input type="text" name="number" placeholder="Mobile number" required>
+  <input type="email" name="email" placeholder="Enter email" pattern=".+(\.co\.uk|\.com)" title="Please enter a valid UK email." required>
   <button class="buttons" type="submit">Sign-up</button>
 </form>
